refactored the app using cusom hook

--- a/src/index.css
+++ b/src/index.css
@@ -279,3 +279,10 @@ Single Movie
   text-align: center;
   padding: 2rem;
 }
+.footer {
+  text-align: center;
+}
+.footer-link {
+  text-decoration: none;
+  color: black;
+}
